modified:   Exercise2/animal.html

--- a/Exercise2/animal.html
+++ b/Exercise2/animal.html
@@ -1,5 +1,5 @@
 <figure>
-    <img src="images/portrait-of-a-raccoon.jpg" class="smaller_images" alt ="raccoon">
+    <img src="Exercise1/hePullUp.jpg" alt ="capybara">
 </figure>
 <main>
     <p>
