deleted:    Exercise1/hePullUp.jpg 	modified:   Exercise2/animal.html 	new file:   Images/Capybara_portrait.jpg

--- a/Exercise2/animal.html
+++ b/Exercise2/animal.html
@@ -1,5 +1,5 @@
 <figure>
-    <img src="Exercise1/hePullUp.jpg" alt ="capybara">
+    <img src="Images/Capybara_portrait.jpg" alt ="capybara">
 </figure>
 <main>
     <p>
