modified:   Exercise3/quote.html

--- a/Exercise3/quote.html
+++ b/Exercise3/quote.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="Exercise3/divStyle.css">
+<link rel="stylesheet" href="divStyle.css">
 <div>
     You will never know succcess unless you know failure
 </div>
