deleted:    Exercise3/divStyle.css 	modified:   Exercise3/quote.html

--- a/Exercise3/quote.html
+++ b/Exercise3/quote.html
@@ -1,4 +1,10 @@
-<link rel="stylesheet" href="divStyle.css">
+<style>
+    div{
+        border: 1 px solid green;
+    }
+</style>
+<html>
 <div>
     You will never know succcess unless you know failure
 </div>
+</html>
