--- a/Exercise2/animal.html
+++ b/Exercise2/animal.html
@@ -1,4 +1,4 @@
- <img src="Images/Capybara_portrait.jpg" alt ="capybara">
+ <img src="Capybara_portrait.jpg" alt ="capybara">
     <p>
         A capybara pondering.
     </p>
