modified:   Exercise5/about.html

--- a/Exercise5/about.html
+++ b/Exercise5/about.html
@@ -6,5 +6,9 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa consectetur 
         dolorem ad quos nulla, exercitationem in id quis. Deleniti nisi molestiae 
         vitae accusantium qui expedita modi officiis nihil et amet?
-    </p>
+    </p> <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Dicta obcaecati labore, tempore maxime accusantium at. 
+         Laudantium laboriosam sit voluptatem ea rem minus totam ad 
+         ipsam pariatur error ipsa asperiores inventore laborum, autem dolor odio dolorem expedita deleniti fuga quos omnis quidem? Iusto!</p>
 </body>
