modified:   Exercise6/index.html 	modified:   Exercise6/styles.css

--- a/Exercise6/index.html
+++ b/Exercise6/index.html
@@ -1,3 +1,14 @@
 <header>
-    <h1>Hello World</h1>
+    <h1 id = "main-title">Hello World</h1>
 </header>
+<body>
+    <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+     Corrupti id at dicta a cum, repellat atque magni velit veritatis laborum sapiente officiis quidem rem? Aspernatur, magnam error!
+      Fugiat, dolores odio.
+    </p>
+    <br>
+    <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis eius iusto repellat labore hic praesentium odit?
+         Esse suscipit assumenda ex, fugiat quidem odio repudiandae labore cum porro hic illo ea doloremque voluptatum amet explicabo impedit itaque alias?
+         Temporibus, vitae impedit? Voluptatum odio sunt totam illum.
+    </p>
+</body>
