modified:   Exercise4/index.html 	modified:   Exercise1/index.html 	modified:   Exercise2/index.html 	modified:   Exercise3/index.html

--- a/Exercise4/index.html
+++ b/Exercise4/index.html
@@ -18,7 +18,16 @@
 
 </style>
 <html>
-<p1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit fuga odio minima nam enim voluptas atque necessitatibus! Voluptates aliquam excepturi fugit quos, incidunt, dolor laboriosam neque mollitia, eius ipsam labore. Perferendis, quo id!</p1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+</head>
+<body>
+    <p1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit fuga odio minima nam enim voluptas atque necessitatibus! Voluptates aliquam excepturi fugit quos, incidunt, dolor laboriosam neque mollitia, eius ipsam labore. Perferendis, quo id!</p1>
 <br>
 <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi inventore non exercitationem voluptatibus amet obcaecati odit reiciendis. Id officiis tenetur, asperiores ab temporibus nesciunt totam iure quas ut aut? Inventore exercitationem nobis dolorum consequuntur? Voluptate accusantium voluptatibus fugiat voluptatum aperiam maxime distinctio iusto recusandae?</p2>
 <br>
@@ -26,4 +35,6 @@
 <br>
 <p4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam voluptate aut excepturi? Eligendi beatae voluptatibus similique iste commodi alias, laboriosam atque a exercitationem distinctio eum magni quia omnis facere veniam quos ut! Cumque, ex rem temporibus ut molestiae accusamus, repellendus quam doloribus sed veniam tempora. Officia, quam.</p4>
 <br>
+    
+</body>
 </html>
