--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -1,3 +1,15 @@
-<header><h1>Kevin Romano</h1>
-    <h2>12 September 2022</h2>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <header>
+        <h1>Kevin Romano</h1>
+        <h2>12 September 2022</h2>
+    </header>
+</head>
+<body>
+    
+</body>
+</html>
