--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -1,4 +1,15 @@
  <img src="Capybara_portrait.jpg" alt ="capybara">
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ </head>
+ <body>
+    <img src="Capybara_portrait.jpg" alt ="capybara">
     <p>
         A capybara pondering.
     </p>
+ </body>
+ </html>
